--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% set active_page = "index" %}
 
 {% block content %}
     <h1>{% block title %} Savannah for Suricata {% endblock %}</h1>
