--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -8,34 +8,48 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>{% block title %} {% endblock %}</title>
+    <title>Login - Savannah</title>
   </head>
-  {% set active_page = active_page|default('index') -%}
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand" href="{{ url_for('index')}}">Savannah</a>
+        <a class="navbar-brand" href="#">Savannah</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-            <li class="nav-item {% if 'index' == active_page %}active{% endif %}">
-                <a class="nav-link" href="/">Status</a>
-            </li>
-            <li class="nav-item {% if 'alerts' == active_page %}active{% endif %}">
-                <a class="nav-link" href="/alerts">Alerts</a>
-            </li>
-            <li class="nav-item {% if 'settings' == active_page %}active{% endif %}">
-                <a class="nav-link" href="/settings">Settings</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
-            </li>
-            </ul>
         </div>
     </nav>
     <div class="container">
-        {% block content %} {% endblock %}
+        <div class="bg-white border rounded mt-5">
+            <section class="w-100 p-4 d-flex justify-content-center pb-4">
+                <form style="width: 22rem;" action="" method="post">
+                    <h4 class="bp3-heading pb-4 text-center">Savannah</h4>
+
+                  <!-- Login input -->
+                  <div class="form-outline mb-3">
+                      <input type="text" class="form-control" name="username" placeholder="Username" autofocus="" required/>
+                  </div>
+
+                  <!-- Password input -->
+                  <div class="form-outline mb-3">
+                    <input type="password" name="password" class="form-control" placeholder="Password" required/>
+                  </div>
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                        <div class="border rounded bg-danger bg-light text-danger p-1 mb-2">
+                            {% for category, message in  messages %}
+	                            <span class="{{ category }}">{{ message }}</span>
+                            {% endfor %}
+                        </div>
+                        {% endif %}
+                    {% endwith %}
+
+                  <!-- Submit button -->
+                  <button class="btn btn-primary btn-block mb-4">Sign in</button>
+
+                </form>
+            </section>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
