--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
             <li class="nav-item {% if 'index' == active_page %}active{% endif %}">
                 <a class="nav-link" href="/">Status</a>
             </li>
@@ -28,10 +28,13 @@
             <li class="nav-item {% if 'settings' == active_page %}active{% endif %}">
                 <a class="nav-link" href="/settings">Settings</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
-            </li>
+            {% if current_user.is_admin %}
+                <li class="nav-item {% if 'users' == active_page %}active{% endif %}">
+                    <a class="nav-link" href="/users">Users</a>
+                </li>
+            {% endif %}
             </ul>
+            <a class="navbar-text" href="/logout">Logout</a>
         </div>
     </nav>
     <div class="container">
