--- a/app/templates/alerts.html
+++ b/app/templates/alerts.html
@@ -2,34 +2,34 @@
 {% set active_page = "alerts" %}
 
 {% block content %}
-    <h1>{% block title %} Suricata Alerts {% endblock %}</h1>
+    <h1>{% block title %} {{ _('Suricata alerts') }} {% endblock %}</h1>
     {% if alerts_error %}
-        <h3>EVE loading error. Alerts cannot be loaded.</h3>
+        <h3>{{ _('EVE loading error. Alerts cannot be loaded.') }}</h3>
     {% else %}
         <form method="get">
             <div class="input-group mb-3">
-                <label class="input-group-text" for="p">Page</label>
+                <label class="input-group-text" for="p">{{ _('Page') }}</label>
                 <input class="form-control input-sm" id="p" name="p" type="number" value="{{ curr_page }}" max="{{ total_pages }}" min="1" width="auto">
                 <span class="input-group-text"> / </span>
                 <input class="form-control" type="text" readonly value="{{ total_pages }}">
-                <button class="btn btn-outline-secondary">Submit</button>
+                <button class="btn btn-outline-secondary">{{ _('Submit') }}</button>
             </div>
         </form>
         <div>
             <table class="table table-striped table-sm">
                 <thead class="font-weight-bold">
                     <tr>
-                    <td>Time</td>
-                    <td>Interface</td>
-                    <td>Src IP</td>
-                    <td>Src Port</td>
-                    <td>Dest IP</td>
-                    <td>Dest Port</td>
-                    <td>Protocol</td>
-                    <td>App Protocol</td>
-                    <td>SID</td>
-                    <td>Message</td>
-                    <td>Severity</td>
+                    <td>{{ _('Time') }}</td>
+                    <td>{{ _('Interface') }}</td>
+                    <td>{{ _('Src IP') }}</td>
+                    <td>{{ _('Src Port') }}</td>
+                    <td>{{ _('Dest IP') }}</td>
+                    <td>{{ _('Dest Port') }}</td>
+                    <td>{{ _('Protocol') }}</td>
+                    <td>{{ _('App Protocol') }}</td>
+                    <td>{{ _('SID') }}</td>
+                    <td>{{ _('Message') }}</td>
+                    <td>{{ _('Severity') }}</td>
                 </tr>
                 </thead>
                 <tbody>
