--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -2,36 +2,36 @@
 {% set active_page = "users" %}
 
 {% block content %}
-    <h1>{% block title %} Users {% endblock %}</h1>
+    <h1>{% block title %} {{ _('Users') }} {% endblock %}</h1>
     {% if users_error %}
-        <h3>Users loading error.</h3>
+        <h3>{{ _('Users loading error.') }}</h3>
     {% else %}
-        <h3>Add user:</h3>
+        <h3>{{ _('Add user:') }}</h3>
         <form class="form-inline" method="post">
             <input type="hidden" name="req_type" value="add_user">
-            <label class="sr-only" for="username">Username</label>
-            <input class="form-control mb-2 mr-sm-2" id="username" name="username" type="text" placeholder="Username" required maxlength="50" minlength="1">
-            <label class="sr-only" for="password">Password</label>
-            <input class="form-control mb-2 mr-sm-2" id="password" name="password" type="password" placeholder="Password" required maxlength="100" minlength="5">
-            <label class="sr-only" for="name">Name</label>
-            <input class="form-control mb-2 mr-sm-2" id="name" name="name" type="text" placeholder="Name" maxlength="100">
+            <label class="sr-only" for="username">{{ _('Username') }}</label>
+            <input class="form-control mb-2 mr-sm-2" id="username" name="username" type="text" placeholder="{{ _('Username') }}" required maxlength="50" minlength="1">
+            <label class="sr-only" for="password">{{ _('Password') }}</label>
+            <input class="form-control mb-2 mr-sm-2" id="password" name="password" type="password" placeholder="{{ _('Password') }}" required maxlength="100" minlength="5">
+            <label class="sr-only" for="name">{{ _('Name') }}</label>
+            <input class="form-control mb-2 mr-sm-2" id="name" name="name" type="text" placeholder="{{ _('Name') }}" maxlength="100">
             <div class="form-check mb-2 mr-sm-2">
                 <input class="form-check-input" type="checkbox" id="is_admin" name="is_admin">
-                <label class="form-check-label" for="is_admin">Administrator</label>
+                <label class="form-check-label" for="is_admin">{{ _('Administrator') }}</label>
             </div>
-            <button class="btn btn-primary mb-2">Submit</button>
+            <button class="btn btn-primary mb-2">{{ _('Submit') }}</button>
         </form>
-        <h3>Manage users:</h3>
+        <h3>{{ _('Manage users:') }}</h3>
         <div>
             <table class="table table-striped table-sm">
                 <thead class="font-weight-bold">
                     <tr>
-                        <td>UID</td>
-                        <td>Username</td>
-                        <td>Name</td>
-                        <td>Admin</td>
-                        <td>Created</td>
-                        <td>Options</td>
+                        <td>{{ _('UID') }}</td>
+                        <td>{{ _('Username') }}</td>
+                        <td>{{ _('Name') }}</td>
+                        <td>{{ _('Admin') }}</td>
+                        <td>{{ _('Created') }}</td>
+                        <td>{{ _('Options') }}</td>
                     </tr>
                 </thead>
                 <tbody>
@@ -48,9 +48,10 @@
                                     <input type="hidden" name="req_type" value="edit_user">
                                     <input type="hidden" name="target_user" value="{{ user.id }}">
                                     <button class="btn btn-sm btn-outline-secondary mr-1" type="submit" name="action" value="{% if user.is_admin %}deadmin{% else %}make_admin{% endif %}">
-                                        {% if user.is_admin %}deadmin{% else %}admin{% endif %}
+                                        {% if user.is_admin %}{{ _('deadmin') }}{% else %}{{ _('admin') }}{% endif %}
                                     </button>
-                                    <button class="btn btn-sm btn-outline-secondary" type="submit" name="action" value="delete">delete</button>
+                                    <button class="btn btn-sm btn-outline-secondary" type="submit" name="action" value="delete">
+                                        {{ _('delete') }}</button>
                                 </form>
                             {% endif %}
                         </td>
